# aieco

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  deploy.py  deploy_local.py  preflight.py  test1.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pytest.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/core/: auth.py  (+7 more)
backend/tests/: test_api.py
docker/: .env.example  docker-compose.cloud.yml  docker-compose.local.yml
docs/: BENCHMARKS.md  CODING_CLI_SETUP.md  COST_ANALYSIS.md  DOCUMENTATION.md  MODEL_COMPARISON.md  MULTI_MODEL_ARCHITECTURE.md  PRIVACY_ANALYSIS.md  QUICKSTART.md  README.md  SECURITY.md  cost-calculator.html
docs/adr/: 001-fastapi-backend.md  002-glm-47-model.md  003-skills-system.md
docs/api/: API_REFERENCE.md
docs/guides/: DEPLOYMENT.md  GETTING_STARTED.md
docs/sdk/: JAVASCRIPT_SDK.md  PYTHON_SDK.md
frontend/chat-app/: index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/dashboard/: index.html  package.json  tsconfig.node.json  vite.config.ts
model-server/: max-context-coding.sh  multi-model-8x.sh
model-server/cloud/: start_glm47.sh
model-server/local/: start_local.sh
opencode-config/: config.json  setup_opencode.sh
sdk/javascript/: README.md  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/aieco/: __init__.py  client.py
skills/code-review/: SKILL.md
skills/data-analyst/: SKILL.md
skills/devops-engineer/: SKILL.md
skills/python-developer/: SKILL.md
skills/technical-writer/: SKILL.md
(+31 files in other folders)
