[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aieco"
version = "1.0.0"
description = "Python SDK for AIEco - Private AI Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
async = ["httpx[http2]"]

[project.urls]
Homepage = "https://github.com/yourusername/aieco"
Documentation = "https://github.com/yourusername/aieco#readme"
